@@ -44,8 +44,9 @@ ntfsfix_SOURCES		= ntfsfix.c utils.c utils.h
 ntfsfix_LDADD		= $(AM_LIBS)
 ntfsfix_LDFLAGS		= $(AM_LFLAGS)
 
+mkntfs_CPPFLAGS		= $(AM_CPPFLAGS) $(MKNTFS_CPPFLAGS)
 mkntfs_SOURCES		= attrdef.c attrdef.h upcase.c upcase.h boot.c boot.h sd.c sd.h mkntfs.c utils.c utils.h
-mkntfs_LDADD		= $(AM_LIBS)
+mkntfs_LDADD		= $(AM_LIBS) $(MKNTFS_LIBS)
 mkntfs_LDFLAGS		= $(AM_LFLAGS)
 
 ntfslabel_SOURCES	= ntfslabel.c utils.c utils.h
